platform-engineer/hubble-k8s-exporter.yml
---
# Source: hubble-k8s-exporter/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hubble-k8s-exporter
  labels:
    helm.sh/chart: hubble-k8s-exporter-1.0.4
    app.kubernetes.io/name: hubble-k8s-exporter
    app.kubernetes.io/instance: hubble-k8s-exporter
    app.kubernetes.io/version: "1.0.4"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hubble-k8s-exporter
      app.kubernetes.io/instance: hubble-k8s-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hubble-k8s-exporter
        app.kubernetes.io/instance: hubble-k8s-exporter
    spec:
      serviceAccountName: hubble-k8s-exporter
      securityContext:
        {}
      containers:
        - name: hubble-k8s-exporter
          securityContext:
            {}
          image: "quay.io/isovalent/hubble-k8s-exporter:v1.0.4"
          imagePullPolicy: IfNotPresent
          resources:
            {}
          volumeMounts:
            - mountPath: "/etc/hubble-k8s-exporter"
              name: config
              readOnly: true
            - mountPath: /var/run/cilium
              name: cilium-run
      volumes:
        - name: config
          configMap:
            name: hubble-k8s-exporter
            items:
            - key: config.yaml
              path: config.yaml
        - name: cilium-run
          hostPath:
            path: /var/run/cilium
            type: DirectoryOrCreate
