platform-engineer/deathstar2.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: endor
  name: deathstar2
  labels:
    app.kubernetes.io/name: deathstar2
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
  selector:
    org: empire
    class: deathstar2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: endor
  name: deathstar2
  labels:
    app.kubernetes.io/name: deathstar2
spec:
  replicas: 1
  selector:
    matchLabels:
      org: empire
      class: deathstar2
  template:
    metadata:
      labels:
        org: empire
        class: deathstar2
        app.kubernetes.io/name: deathstar2
    spec:
      containers:
      - name: deathstar
        image: quay.io/cilium/starwars:v2.1@sha256:833d915ec68fca3ce83668fc5dae97c455b2134d8f23ef96586f55b894cfb1e8
