platform-engineer/jobs-app.yml
---
# Jobposting service
apiVersion: v1
kind: Service
metadata:
  name: jobposting
  labels:
    app: jobposting
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: jobposting
---
# Jobposting deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobposting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobposting
  template:
    metadata:
      labels:
        app: jobposting
    spec:
      containers:
        - name: jobposting
          image: quay.io/isovalent/jobs-app-jobposting:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
---
# Recruiter service
apiVersion: v1
kind: Service
metadata:
  name: recruiter
  labels:
    app: recruiter
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: recruiter
---
# Recruiter deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recruiter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recruiter
  template:
    metadata:
      labels:
        app: recruiter
    spec:
      containers:
        - name: recruiter
          image: quay.io/isovalent/jobs-app-recruiter:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
---
# Coreapi service
apiVersion: v1
kind: Service
metadata:
  name: coreapi
  labels:
    app: coreapi
spec:
  ports:
    - name: "http"
      protocol: TCP
      port: 9080
      targetPort: 9080
  selector:
    app: coreapi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coreapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coreapi
  template:
    metadata:
      labels:
        app: coreapi
    spec:
      containers:
        - name: coreapi
          image: quay.io/isovalent/jobs-app-coreapi:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
---
# Elasticsearch service
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  ports:
    - port: 9200
      name: http
  selector:
    app: elasticsearch
---
# Elasticsearch deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: quay.io/isovalent/jobs-app-elasticsearch:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-headless
spec:
  ports:
    - port: 9092
      name: client
  clusterIP: None
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  serviceName: kafka-headless
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: quay.io/isovalent/jobs-app-kafka:latest
          ports:
            - containerPort: 9092
              name: client
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: quay.io/isovalent/jobs-app-zookeeper:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 2181
              name: client
            - containerPort: 2888
              name: server
            - containerPort: 3888
              name: leader-election
---
apiVersion: v1
kind: Service
metadata:
  name: zk-headless
spec:
  ports:
    - port: 2181
      name: client
    - port: 2888
      name: server
    - port: 3888
      name: leader-election
  clusterIP: None
  selector:
    app: zookeeper
---
# loader service
apiVersion: v1
kind: Service
metadata:
  name: loader
  labels:
    app: loader
spec:
  ports:
    - port: 50051
      name: grpc
  selector:
    app: loader
---
# Loader deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loader
  template:
    metadata:
      labels:
        app: loader
    spec:
      containers:
        - name: loader
          image: quay.io/isovalent/jobs-app-loader:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
---
# Crawler deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crawler
  template:
    metadata:
      labels:
        app: crawler
    spec:
      containers:
        - name: crawler
          image: quay.io/isovalent/jobs-app-crawler:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
